--- a/Walkies.Android/Properties/AndroidManifest.xml
+++ b/Walkies.Android/Properties/AndroidManifest.xml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          package="Walkies_Android.Walkies_Android" 
           android:versionCode="1" 
-          android:versionName="1.0">
+          android:versionName="1.0" 
+          package="Walkies.Android.Walkies.Android">
   <uses-sdk android:minSdkVersion="21" />
-  <application android:allowBackup="true" android:label="@string/app_name">
+  <application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name">
   </application>
 </manifest>
