--- a/Walkies.Admin/appsettings.Development.json
+++ b/Walkies.Admin/appsettings.Development.json
@@ -9,5 +9,8 @@
 
   "ConnectionStrings": {
     "DefaultDB": "Server=(localdb)\\ProjectsV13;Database=Walkies.Database;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "LocalDataStorage": {
+    "DogLocationsCSV": "C;/asdjf;as"
   }
 }
