--- a/Walkies_Android/Walkies_Android.csproj
+++ b/Walkies_Android/Walkies_Android.csproj
@@ -86,8 +86,8 @@
     <Folder Include="Resources\mipmap-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Walkies.Core\Walkies.Common.csproj">
-      <Project>{af739a46-0089-4bdf-9955-4e0cc37b4674}</Project>
+    <ProjectReference Include="..\Walkies.Common\Walkies.Common.csproj">
+      <Project>{14858192-9f9c-4096-9753-cd8fef3af292}</Project>
       <Name>Walkies.Common</Name>
     </ProjectReference>
   </ItemGroup>
