--- a/Walkies.Admin/Walkies.Admin.csproj
+++ b/Walkies.Admin/Walkies.Admin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -7,10 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="RT.Comb" Version="2.3.0" />
+    <PackageReference Include="Scrutor" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Walkies.Common\Walkies.Common.csproj" />
+    <ProjectReference Include="..\Walkies.DatabaseOp\Walkies.DatabaseOperations.csproj" />
   </ItemGroup>
 
 </Project>
