--- a/Walkies.Admin/appsettings.Development.json
+++ b/Walkies.Admin/appsettings.Development.json
@@ -11,6 +11,6 @@
     "DefaultDB": "Server=(localdb)\\ProjectsV13;Database=Walkies.Database;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "LocalDataStorage": {
-    "DogLocationsCSV": "C;/asdjf;as"
+    "DogLocationsCSV": "C:/TestLink"
   }
 }
