--- a/Walkies.DatabaseOp/Walkies.DatabaseOperations.csproj
+++ b/Walkies.DatabaseOp/Walkies.DatabaseOperations.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="MediatR" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="RT.Comb" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
