--- a/Walkies.Admin/Walkies.Admin.csproj
+++ b/Walkies.Admin/Walkies.Admin.csproj
@@ -2,20 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="MediatR" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-	 <PackageReference Include="RT.Comb" Version="2.3.0" />
+    <PackageReference Include="RT.Comb" Version="2.3.0" />
     <PackageReference Include="Scrutor" Version="3.0.1" />
-	    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
-		 <PackageReference Include="RT.Comb" Version="2.3.0" />
-    <PackageReference Include="Scrutor" Version="3.0.1" />
-
   </ItemGroup>
 
   <ItemGroup>
