--- a/Walkies_Android/Walkies_Android.csproj
+++ b/Walkies_Android/Walkies_Android.csproj
@@ -88,6 +88,12 @@
     <Folder Include="Resources\mipmap-xxhdpi\" />
     <Folder Include="Resources\mipmap-xxxhdpi\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Walkies.Core\Walkies.Cross.csproj">
+      <Project>{b3e4c304-a35b-472a-a5c7-9d7a77eb8019}</Project>
+      <Name>Walkies.Cross</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.1\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.1\build\netstandard2.0\NETStandard.Library.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
