--- a/Walkies.Admin/Walkies.Admin.csproj
+++ b/Walkies.Admin/Walkies.Admin.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="RT.Comb" Version="2.3.0" />
     <PackageReference Include="Scrutor" Version="3.0.1" />
   </ItemGroup>
