--- a/Walkies.Core/Walkies.Cross.csproj
+++ b/Walkies.Core/Walkies.Cross.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
   </ItemGroup>
 
