--- a/Walkies.Web/Walkies.Web.csproj
+++ b/Walkies.Web/Walkies.Web.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MediatR" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <PackageReference Include="RT.Comb" Version="2.3.0" />
   </ItemGroup>
