--- a/Walkies.Web/Walkies.Web.csproj
+++ b/Walkies.Web/Walkies.Web.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MediatR" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.0-preview1-final" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="RT.Comb" Version="2.3.0" />
     <PackageReference Include="Scrutor" Version="3.0.1" />
