--- a/Walkies.Common/Walkies.Common.csproj
+++ b/Walkies.Common/Walkies.Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt-Official" Version="0.1.109" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="MediatR" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
