--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,10 @@
 ###############################################################################
 * text=auto
 *.py linguist-detectable=false
-
+ *.js linguist-detectable=false
+ *.html linguist-detectable=false
+ *.css linguist-detectable=false
+ *.xml linguist-detectable=false
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
