--- a/.gitattributes
+++ b/.gitattributes
@@ -2,11 +2,8 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
-*.py linguist-detectable=false
- *.js linguist-detectable=false
- *.html linguist-detectable=false
- *.css linguist-detectable=false
- *.xml linguist-detectable=false
+*.* linguist-language=csharp
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
